Fixed Meal Plan Alignment

--- a/homestyle.css
+++ b/homestyle.css
@@ -244,7 +244,7 @@ a:link {
   .meal_plan_overall{
     text-align: center;
     transform: translateY(-185px);
-    padding-right: 120px;
+    padding-left: 100px;
 
   }
   .meal_plan{
